<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wyw.forag.CActivity">

    <Button
        android:id="@+id/counter_button_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/counter_button_yes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/counter_button_no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/counter_button_no"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginLeft="148dp"
        android:text="@string/counter_button_no"
        app:layout_constraintBaseline_toBaselineOf="@+id/counter_button_yes"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="UnknownId" />

    <TextView
        android:id="@+id/counter_textview_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="368dp"
        android:text="@string/counter_textview_result"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/counter_textview_isEarly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:text="@string/counter_textview_isEarly"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/counter_button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/counter_button_reset"
        app:layout_constraintBaseline_toBaselineOf="@+id/counter_button_no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/counter_button_no" />
</android.support.constraint.ConstraintLayout>
